=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0 CA
 - Merged: Merge changes r5074 - r5084 from the trunk. (windmillway)
 - Changed: Shared Notes: Minor adjustments to edit window size, Fixed error when user does not have Accept Change Auth. (windmillway)
 - Changed: Fixed delete Shared Note on Edit Options on shnote.php page (windmillway)
 - Changed: shnote.php - Hide Edit link when not logged in, cleaned up JavaScript code to conform with PGV norms. (windmillway)
 - Changed: Tidy up of Shared Note Viewing (windmillway)
 - Changed: Improved Shared/Linked Notes handling - add sh_note/edit sh_note/find link/add link/delete link. Only delete shared note remains. (windmillway)
 - Changed: Improved Shared Note "detection for formatting" a little more (windmillway)
 - Merged: Merge changes r5063 - r5073 from the trunk. (windmillway)
 - Added: Theme dependant note.gif and addnote.gif to each respective theme (windmillway)
 - Fixed: Census Assistant error. Corrected function getCensBirthPlace() in class_person.php (windmillway)
 - Added:  Shared Note Support (Also when in Add Census Event mode - removed conversion from Shared to inline Note) (windmillway)
 - Merged: Merge changes r4969 - r5062 from the trunk. (windmillway)
 - Merged: Merge changes r4942 - r4969 from the trunk. (windmillway)
 - Changed: Changes to enable Create New Shared Note (Only partially complete - more to do) (windmillway)
 - Merged: Merge changes r4939 - r4942 from the trunk. (windmillway)
 - Merged: Merge changes r4937 - r4938 from the trunk. (Picked up missing r4938 on last merge) (windmillway)
 - Merged: Merge changes r4936 - r4937 from the trunk. (Picked up missing r4936 on last merge) (windmillway)
 - Merged: Merge changes r4894 - r4935 from the trunk (windmillway)