@@ -10,6 +10,8 @@
 
 
 Version 4.2.0 CA
+ - Added: auto-complete feature to Shared Note edit field (windmillway)
+ - Merged: Merge changes r5085 - r5090 from the trunk, fix: deletion of links to deleted notes. (fisharebest)
  - Merged: Merge changes r5074 - r5084 from the trunk. (windmillway)
  - Changed: Shared Notes: Minor adjustments to edit window size, Fixed error when user does not have Accept Change Auth. (windmillway)
  - Changed: Fixed delete Shared Note on Edit Options on shnote.php page (windmillway)
